--- a/vars/main.yml
+++ b/vars/main.yml
@@ -77,6 +77,7 @@ oneliner_tags:
 - { id: 6 , tag: filebeat }
 - { id: 7 , tag: auditbeat }
 - { id: 8 , tag: packetbeat }
+- { id: 9 , tag: prometheus }
 
 # the structure bellow fills the 'deploy' DB schema with one-liners informations
 oneliner_items:
@@ -111,6 +112,24 @@ oneliner_items:
   tags:
   - 1
   - 3
+  payload_files:
+  - install-metricbeat.bash
+  config_files:
+  - linux_metricbeat.yml
+  upstream_files:
+  - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.3.1-x86_64.rpm
+  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.3.1-amd64.deb
+  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-(x86_|amd)64.+)$'
+  re_replace: '\g<prefix>latest\g<suffix>'
+
+- item: prometheus
+  shell: "bash"
+  markdown_instruction: prometheus_instructions.md
+  markdown_help: ''
+  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/install-prometheus.bash")
+  tags:
+  - 1
+  - 9
   payload_files:
   - install-metricbeat.bash
   config_files:
