--- a/vars/main.yml
+++ b/vars/main.yml
@@ -131,11 +131,11 @@ oneliner_items:
   - 1
   - 9
   payload_files:
-  - install-metricbeat.bash
-  config_files:
-  - linux_metricbeat.yml
-  upstream_files:
-  - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.3.1-x86_64.rpm
-  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.3.1-amd64.deb
-  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-(x86_|amd)64.+)$'
-  re_replace: '\g<prefix>latest\g<suffix>'
+  - install-prometheus.bash
+#  config_files:
+#  - linux_metricbeat.yml
+#  upstream_files:
+#  - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.3.1-x86_64.rpm
+#  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.3.1-amd64.deb
+#  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-(x86_|amd)64.+)$'
+#  re_replace: '\g<prefix>latest\g<suffix>'
