--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -45,6 +45,27 @@
   register: update_epel
   tags: packages
 
+- name: enable RGM repos for 3rd party commercial partners
+  yum_repository:
+    name: "{{ item.name }}"
+    description: "{{ item.descr }}"
+    file: rgm-partners
+    baseurl: "{{ item.url }}"
+    gpgcheck: yes
+    enabled: "{{ item.enabled }}"
+    sslverify: false
+    cache: false
+    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-rgm
+  with_items:
+  - name: 'rgm-partner-vmware'
+    descr: 'RGM Partner - VMWare'
+    url: 'https://community.repo.rgm-cloud.io/commercial/latest/Oracle/'
+    enabled: "{{ install_commercial_oracle | default(false) }}"
+  - name: 'rgm-partner-oracle'
+    descr: 'RGM Partner - Oracle'
+    url: 'https://community.repo.rgm-cloud.io/commercial/latest/VMWare/'
+    enabled: "{{ install_commercial_vmware | default(false) }}"
+
 - name: force yum clean & make cache
   command: yum clean all
   args:
