feat(mariadb): prepared task to upgrade lilac scheme

--- a/tasks/mariadb_post.yml
+++ b/tasks/mariadb_post.yml
@@ -20,6 +20,10 @@
   failed_when: lilac_schema_inject.rc == 2
   when: lilac_schema.failed
 
+#- name: import lilac schema upgrade tasks
+#  import_tasks: mariadb_lilac_upgrade.yml
+#  when: lilac_schema.stdout != db_lilac_schema_version and lilac_schema.changed
+
 - name: check if lilac procedures are installed
   command: >
     mysql --batch --skip-column-names mysql --execute="SELECT count(routine_name) FROM information_schema.routines WHERE routine_type = 'PROCEDURE' AND routine_schema = '{{ db_lilac }}'";
