--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,6 +2,9 @@
 # vars file for ansible-role-rgm
 # vim: bs=2 sw=2 expandtab:
 
+# partners packages list (oracle, vmware, etc.) is built at run-time
+packages_partners:
+
 prometheus_mysql_cnf: /var/lib/prometheus/.my.cnf
 
 # patterns (regex) of Elsticsearch indexes to automatically close and delete with Curator
