--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,6 +2,123 @@
 # vars file for ansible-role-rgm
 # vim: bs=2 sw=2 expandtab:
 
+### RPM packages ###
+packages_system:
+- bash-completion
+- vim
+- sudo
+- net-snmp
+- snmptt
+- chrony
+- net-tools
+- htop
+- iftop
+- iotop
+- telnet
+- sysstat
+- strace
+- lsof
+- nmap
+- tcpdump
+- dos2unix
+- mlocate
+- firewalld
+- perl-version
+- perl-Monitoring-Plugin
+- perl-IO-Socket-INET6
+- perl-Number-Format
+- perl-DateTime
+- perl-Crypt-SSLeay
+- perl-Switch
+- ruby
+- python2-jmespath
+
+packages_mariadb:
+- mariadb-server
+- mariadb
+- python2-PyMySQL
+
+packages_apache:
+- httpd
+- mod_auth_rgm
+- mod_perl
+- mod_ssl
+- mod_fcgid
+- php
+- php-mysqlnd
+- php-ldap
+- php-process
+- php-xml
+- php-snmp
+- php-mcrypt
+
+packages_elastic:
+- java-11-openjdk-headless
+- elasticsearch-oss
+- elasticsearch-curator
+- metricbeat
+- kibana-oss
+
+packages_influx_grafana:
+- influxdb
+- nagflux
+- histou
+- grafana
+- nodejs
+
+packages_rgm:
+- python-dateutil
+- mk-livestatus
+- nagios
+- nagios-plugins
+- nagios-plugins-rgm
+- nagvis
+- nagiosbp
+- notifier
+- nrdp
+- ged
+- ged-mysql
+- thruk
+- lilac
+- rgmweb
+- rgmapi
+- snmp2elastic
+- wmi
+
+packages_prometheus:
+- prometheus
+- prometheus-node_exporter
+- prometheus-pushgateway
+- prometheus-snmp_exporter
+- prometheus-blackbox_exporter
+- prometheus-ping_exporter
+
+packages_python36:
+- python36
+- python36-crypto
+- python36-cryptography
+- python36-pyasn1
+- python36-PyMySQL
+- python36-cffi
+- python36-chardet
+- python36-dateutil
+- python36-decorator
+- python36-gobject-base
+- python36-idna
+- python36-jinja2
+- python36-kitchen
+- python36-libs
+- python36-markupsafe
+- python36-paramiko
+- python36-ply
+- python36-pycparser
+- python36-pycurl
+- python36-requests
+- python36-setuptools
+- python36-six
+- python36-urllib3
+- python36-mysql
+
 # partners packages list (oracle, vmware, etc.) is built at run-time
 packages_partners: []
 
