--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,7 @@ mariadb_user: 'rgminternal'
 mariadb_pwd: '0rd0-c0m1735-b47h0n143'
 mariadb_ro_user: 'rgmro'
 mariadb_ro_pwd: 'XgfLlyTmMeNntE9WrTE3ToQhy7ATZmDC'
+mariadb_backup_username: 'backup'
 
 # database names
 db_rgmweb: 'rgmweb'
