--- a/tasks/elastic.yml
+++ b/tasks/elastic.yml
@@ -46,8 +46,21 @@
     regexp: "{{ item.regex }}"
     line: "{{ item.line }}"
   with_items:
-  - { regex: '^-Xms.*$',  line: "-Xms{{ jvmheapsize }}g" }
-  - { regex: '^-Xmx.*$',  line: "-Xmx{{ jvmheapsize }}g" }
+  - { regex: '^-Xms.*$',                                          line: "-Xms{{ jvmheapsize }}g",                            after: 'EOF' }
+  - { regex: '^-Xmx.*$',                                          line: "-Xmx{{ jvmheapsize }}g",                            after: 'EOF' }
+  - { regex: '-XX:+UseConcMarkSweepGC',                           line: '# -XX:+UseConcMarkSweepGC',                         after: 'EOF' }
+  - { regex: '-XX:CMSInitiatingOccupancyFraction=',               line: '# -XX:CMSInitiatingOccupancyFraction=75',           after: 'EOF' }
+  - { regex: '-XX:+UseCMSInitiatingOccupancyOnly',                line: '# -XX:+UseCMSInitiatingOccupancyOnly',              after: 'EOF' }
+  - { regex: '-XX:+UseG1GC$',                                     line: '-XX:+UseG1GC',                                      after: 'EOF' }
+  - { regex: '.*10-:-XX:+UseG1GC',                                line: '10-:-XX:+UseG1GC',                                  after: '10-:-XX:+UseG1GC' }
+  - { regex: '.*10-:-XX:G1ReservePercent=.*',                     line: '10-:-XX:G1ReservePercent=25',                       after: '10-:-XX:+UseG1GC' }
+  - { regex: '.*10-:-XX:InitiatingHeapOccupancyPercent=.*',       line: '10-:-XX:InitiatingHeapOccupancyPercent=30',         after: '10-:-XX:+UseG1GC' }
+  - { regex: '^# JMX',                                            line: '# JMX',                                             after: '^# JMX' }
+  - { regex: '-Dcom.sun.management.jmxremote',                    line: '-Dcom.sun.management.jmxremote',                    after: '^-Dcom.sun.management.jmxremote' }
+  - { regex: '-Dcom.sun.management.jmxremote.port=10001',         line: '-Dcom.sun.management.jmxremote.port=10001',         after: '^-Dcom.sun.management.jmxremote' }
+  - { regex: '-Dcom.sun.management.jmxremote.rmi.port=10002',     line: '-Dcom.sun.management.jmxremote.rmi.port=10002',     after: '^-Dcom.sun.management.jmxremote' }
+  - { regex: '-Dcom.sun.management.jmxremote.ssl=false',          line: '-Dcom.sun.management.jmxremote.ssl=false',          after: '^-Dcom.sun.management.jmxremote' }
+  - { regex: '-Dcom.sun.management.jmxremote.authenticate=false', line: '-Dcom.sun.management.jmxremote.authenticate=false', after: '^-Dcom.sun.management.jmxremote' }
   notify: service_restart_elasticsearch
 
 - name: ensure elasticsearch is enabled and started
