--- a/vars/main.yml
+++ b/vars/main.yml
@@ -215,6 +215,10 @@ oneliner_items:
   - Add-RGMHost.ps1
   config_files:
   - windows_metricbeat.yml
+  modules_files:
+  - windows_rgm-system-core.yml
+  - windows_rgm-system-fs.yml
+  - windows_rgm-system-uptime.yml
   upstream_files:
   - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.3.1-windows-x86_64.zip
   - https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-oss-7.3.1-windows-x86_64.zip
@@ -237,6 +241,10 @@ oneliner_items:
   - install-metricbeat.bash
   config_files:
   - linux_metricbeat.yml
+  modules_files:
+  - linux_rgm-system-core.yml
+  - linux_rgm-system-fs.yml
+  - linux_rgm-system-uptime.yml
   upstream_files:
   - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.3.1-x86_64.rpm
   - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.3.1-amd64.deb
@@ -255,6 +263,10 @@ oneliner_items:
   - install-prometheus.bash
 #  config_files:
 #  - linux_metricbeat.yml
+#  modules_files:
+#  - linux_rgm-system-core.yml
+#  - linux_rgm-system-fs.yml
+#  - linux_rgm-system-uptime.yml
 #  upstream_files:
 #  - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.3.1-x86_64.rpm
 #  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.3.1-amd64.deb
