--- a/tasks/elastic.yml
+++ b/tasks/elastic.yml
@@ -47,14 +47,14 @@
     line: "{{ item.line }}"
     insertafter: "{{ item.after }}"
   with_items:
-  - { regex: '^-Xms.*$',                                              line: "-Xms{{ jvmheapsize }}g",                            after: 'EOF' }
-  - { regex: '^-Xmx.*$',                                              line: "-Xmx{{ jvmheapsize }}g",                            after: 'EOF' }
+  - { regex: '^-Xms\\d+$',                                            line: "-Xms{{ jvmheapsize }}g",                            after: 'EOF' }
+  - { regex: '^-Xmx\\d+$',                                            line: "-Xmx{{ jvmheapsize }}g",                            after: 'EOF' }
   - { regex: '^.*-XX:\+UseConcMarkSweepGC$',                          line: '# -XX:+UseConcMarkSweepGC',                         after: 'EOF' }
-  - { regex: '^.*-XX:CMSInitiatingOccupancyFraction=.*$',             line: '# -XX:CMSInitiatingOccupancyFraction=75',           after: 'EOF' }
+  - { regex: '^.*-XX:CMSInitiatingOccupancyFraction=\\d+$',           line: '# -XX:CMSInitiatingOccupancyFraction=75',           after: 'EOF' }
   - { regex: '^.*-XX:\+UseCMSInitiatingOccupancyOnly$',               line: '# -XX:+UseCMSInitiatingOccupancyOnly',              after: 'EOF' }
   - { regex: '^.*10-:-XX:\+UseG1GC$',                                 line: '10-:-XX:+UseG1GC',                                  after: '^#+ G1GC Configuration$' }
-  - { regex: '^.*10-:-XX:G1ReservePercent=.*$',                       line: '10-:-XX:G1ReservePercent=25',                       after: '^.*-XX:\+UseG1GC$' }
-  - { regex: '^.*10-:-XX:InitiatingHeapOccupancyPercent=.*$',         line: '10-:-XX:InitiatingHeapOccupancyPercent=30',         after: '^.*-XX:\+UseG1GC$' }
+  - { regex: '^.*10-:-XX:G1ReservePercent=\\d+$',                     line: '10-:-XX:G1ReservePercent=25',                       after: '^.*-XX:\+UseG1GC$' }
+  - { regex: '^.*10-:-XX:InitiatingHeapOccupancyPercent=\\d+$',       line: '10-:-XX:InitiatingHeapOccupancyPercent=30',         after: '^.*-XX:\+UseG1GC$' }
   - { regex: '^# JMX',                                                line: '# JMX',                                             after: 'EOF' }
   - { regex: '^.*-Dcom.sun.management.jmxremote$',                    line: '-Dcom.sun.management.jmxremote',                    after: '^# JMX$' }
   - { regex: '^.*-Dcom.sun.management.jmxremote.port=\\d+$',          line: '-Dcom.sun.management.jmxremote.port=10001',         after: '^-Dcom.sun.management.jmxremote.*$' }
