increase elasticsearch starting delays

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -263,6 +263,7 @@
     owner: root
     group: root
     state: link
+  ignore_errors: yes
 
 ### configure chronyd
 - name: configure chrony daemon
