--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,7 +37,7 @@
     path: /etc/yum.repos.d/epel.repo
     section: "{{ item }}"
     option: exclude
-    value: 'nagios* elasticsearch* metricbeat* kibana* grafana* influxdb*'
+    value: 'nagios* elasticsearch* metricbeat* kibana* grafana* influxdb* snmptt'
   with_items:
   - epel
   - epel-debuginfo
