Feature/prometheus service activation (#28)
* Remove fixed IP

* Add TLS1.2 command line

* Fix verbos typo and display beat install args in verbose

* fix ssl.conf

* Add missing ExportConfig api call

* hotfixes (#18)

* Remove fixed IP

* Add TLS1.2 command line

* Fix verbos typo and display beat install args in verbose

* fix ssl.conf

* Add missing ExportConfig api call

* explicitly exclude snmptt pkg from EPEL repo

Co-authored-by: guyomog78 <gaugey@fr.scc.com>

* Dev (#20)

* Remove fixed IP

* Add TLS1.2 command line

* Fix verbos typo and display beat install args in verbose

* fix ssl.conf

* Add missing ExportConfig api call

* explicitly exclude snmptt pkg from EPEL repo

* fix defautl Windows Template name

Co-authored-by: guyomog78 <gaugey@fr.scc.com>
Co-authored-by: Eric Belhomme <ebelhomme@ricozome.net>

* Dev (#23)

* Remove fixed IP

* Add TLS1.2 command line

* Fix verbos typo and display beat install args in verbose

* fix ssl.conf

* Add missing ExportConfig api call

* explicitly exclude snmptt pkg from EPEL repo

* fix defautl Windows Template name

* Fix MetricBeat Windows Installation on Powershell <5.1 (#21)

* Add TLS line

* More resilence

Add function for message display to avoid write-information issues
it was probably the cause of everything

Complete some verbose
Add some try catch

Co-authored-by: guyomog78 <gaugey@fr.scc.com>
Co-authored-by: Michael Aubertin <michael.aubertin@gmail.com>
Co-authored-by: guyomog78 <17220155+guyomog78@users.noreply.github.com>

* fix number of ES index replicas to 0 for Beats (#24)

* add prometheus config

* use ansible handlers for service restart

* elastic curator actions enhancements: (#29)

- Force indexes for be writable
- force set replicas shards to 0 (defaults to 1)

* add prometheus config

* use ansible handlers for service restart

Co-authored-by: guyomog78 <gaugey@fr.scc.com>
Co-authored-by: Mi

--- a/tasks/prometheus.yml
+++ b/tasks/prometheus.yml
@@ -19,7 +19,6 @@
   - { regex: '^(#\s*)?PROMETHEUS_LISTEN=',  line: "PROMETHEUS_LISTEN='--web.listen-address=127.0.0.1:9090'" }
   - { regex: '^(#\s*)?PROMETHEUS_STORAGE=',  line: "PROMETHEUS_STORAGE='--storage.tsdb.path=/var/lib/prometheus/data --storage.tsdb.retention.time=12h'" }
   notify: service_restart_prometheus
-  register: prometheus_cfg_changed
 
 - name: set prometheus config file
   template:
@@ -28,6 +27,7 @@
     owner: root
     group: prometheus
     mode: 0640
+  notify: service_restart_prometheus
 
 - name: enable prometheus module for metricbeat
   command: mv /etc/metricbeat/modules.d/prometheus.yml.disabled /etc/metricbeat/modules.d/prometheus.yml
@@ -35,4 +35,10 @@
     creates: /etc/metricbeat/modules.d/prometheus.yml
   notify: service_restart_metricbeat
 
-# https://docs.influxdata.com/influxdb/v1.5/administration/server_monitoring/#influxdb-metrics-http-endpoint
+- name: ensure prometheus service is running
+  systemd:
+    name: prometheus
+    enabled: yes
+    state: started
+
+# https://prometheus.io/docs/prometheus/latest/getting_started/
