add defaults for RGM yum repository

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,8 +53,8 @@
     baseurl: "{{ item['value']['baseurl'] }}"
     gpgcheck: "{{ item['value']['gpgcheck'] }}"
     enabled: "{{ item['value']['enabled'] }}"
-    keepcache: "{{ item['value']['cache'] }}"
-    gpgkey: "{{ item['value']['gpgkey'] }}"
+    keepcache: "{{ item['value']['cache'] | default(false)}}"
+    gpgkey: "{{ item['value']['gpgkey'] | default('file://' + rgm_gpg_key) }}"
     sslverify: "{{ item['value']['sslverify'] | default(omit) }}"
     sslclientcert: "{{ item['value']['sslclientcert'] | default(omit) }}"
     sslclientkey: "{{ item['value']['sslclientkey'] | default(omit) }}"
